all bottom nav bar fix

--- a/client/src/output.css
+++ b/client/src/output.css
@@ -2343,6 +2343,11 @@ body {
   background-color: rgb(250 250 250 / 0.9);
 }
 
+.bg-indigo-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(238 242 255 / var(--tw-bg-opacity, 1));
+}
+
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
 }
